[package]
name = "reqwest-maybe-middleware"
version = "0.3.0"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Protryon/reqwest-maybe-middleware"
description = "Wrapper over reqwest and reqwest-middleware to provide compatibility for either"
keywords = [ "reqwest", "http", "middleware" ]

[dependencies]
reqwest = { version = "0.12", default-features = false }
serde = "1.0"
http = "1.0"
thiserror = "1.0"

task-local-extensions = { version = "0.1.4", optional = true }
reqwest-middleware = { version = "0.3", optional = true }
anyhow = { version = "1.0", optional = true }

[features]
# implicitly turns on multipart/json in reqwest, so no point in avoiding it for now
middleware = ["reqwest-middleware", "json", "multipart", "anyhow", "task-local-extensions"]
json = ["reqwest/json"]
multipart = ["reqwest/multipart"]
